--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="final_work.hasby.pewapp.MainActivity">
 
     <org.opencv.android.JavaCameraView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="1.5in"
         android:id="@+id/camera_view"
         app:camera_id="front" />
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1.5in"
+        android:id="@+id/imageView"/>
+
+</LinearLayout>
